--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,8 @@
     "name": "fanil/amocrm",
     "require": {
         "amocrm/amocrm-api-library": "^1.9",
-        "vlucas/phpdotenv": "^5.6"
+        "vlucas/phpdotenv": "^5.6",
+        "phpmailer/phpmailer": "^6.9"
     },
     "autoload": {
         "psr-4": {
